docs: add user router docs
